# Noesis

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  DIAGRAMS.md  PANEL-REVIEW.md  PARITY.md  PHILOSOPHY.md  README.md  ROADMAP.md  VISION.md  docker-compose.yml  package-lock.json  package.json  roadmap.html
brain/: pyproject.toml
brain/data/nous/: hermes.yaml  sophia.yaml  themis.yaml
brain/src/noesis_brain/: __init__.py  __main__.py  state_hash.py
brain/test/: dialogue_fixtures.py  test_ananke_no_walltime.py  test_bios_no_walltime.py  test_dialogue_context_consumption.py  test_fixture_adapter.py  test_get_state_widening.py  test_handler_agency.py  test_llm_claude.py  test_llm_ollama.py  test_llm_openai_compat.py  test_llm_router.py  test_llm_types.py  test_main.py  test_memory.py  test_prompts.py  test_psyche.py  test_rpc_handler.py  test_rpc_hash_state.py  test_rpc_server.py  test_rpc_types.py  test_state_hash.py  test_telos.py  test_telos_refined_action.py  test_thymos.py  test_trade_request_shape.py
brain/test/ananke/: conftest.py  test_drives_bounds.py  test_drives_determinism.py  test_drives_threshold_crossing.py  test_handler_ananke.py  test_loader.py
brain/test/bios/: test_epoch_since_spawn.py  test_needs_baseline.py  test_needs_determinism.py  test_needs_elevator.py
brain/test/chronos/: test_retrieval_with_chronos.py  test_subjective_time.py
brain/test/governance/: test_commit_hash.py  test_commit_reveal.py  test_proposer.py  test_state_retention.py  test_voter_commit.py  test_voter_reveal.py
brain/test/whisper/: __init__.py  (+8 more)
(+905 files in other folders)
