[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "noesis-brain"
version = "0.1.0"
description = "Nous cognitive architecture — Psyche, Telos, Thymos, Memory, Autonomy"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "openai>=1.0.0",
    "anthropic>=0.30.0",
]

[project.optional-dependencies]
memory = [
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5.0",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
testpaths = ["test"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
